Update git ignore, readme, and welcome index template

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
-<h2>Hello World!</h2>
+<h2>Hello Heart Services!</h2>
 <p>
-    The time is now: <%= Time.now %>
+    The time is now: <%= Time.now %> (on the Heroku Server).
+    <p onclick="this.innerText='(click here) Your local time is... ' + new Date(Date.now());event.preventDefault();">(click here) Your local time is... </p>
 </p>
